--- a/freebooks/package.json
+++ b/freebooks/package.json
@@ -12,6 +12,7 @@
     "parcel-bundler": "^1.12.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.20.1",
     "sqlite": "^4.1.1",
